--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ MigrationBackup/
 /Databases/MoovAIntegrationDB/MoovAIntegrationDB.dbmdl
 /Databases/MoovAIntegrationDB/MoovAIntegrationDB.jfm
 /MoovA.Integration.API/obj/Debug/net9.0/MoovA.Integration.API.AssemblyInfo.cs
+/.vs/MoovAIntegration/CopilotIndices/17.12.53.23981/SemanticSymbols.db-wal
