--- a/Movva.Configuration/Movva.Configuration.csproj
+++ b/Movva.Configuration/Movva.Configuration.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Engine\Common\Movva.Data\Movva.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+  </ItemGroup>
+
 </Project>
