--- a/Engine/Management/Moova.Integration.Application/Moova.Integration.Application.csproj
+++ b/Engine/Management/Moova.Integration.Application/Moova.Integration.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Moova.Integration.Domain\Moova.Integration.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
